# text-statistical-analysis

./: README.md  pyproject.toml
analysis/: admin.py  models.py  service.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_synonymgroup_word_delete_synonym.py
service/: settings.py  urls.py
